--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,12 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
+	<dependencies>
+		<dependency>
+			<groupId>args4j</groupId>
+			<artifactId>args4j</artifactId>
+			<version>2.33</version>
+		</dependency>
+	</dependencies>
+
 </project>
