--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 			<artifactId>args4j</artifactId>
 			<version>2.33</version>
 		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>3.11.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
